Enable the new declaration language.
Refs #113677